--- a/Cursach/Страницы/View/KindView.xaml
+++ b/Cursach/Страницы/View/KindView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Cursach.Страницы.View.UserView"
+﻿<Page x:Class="Cursach.Страницы.View.KindView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,18 +6,17 @@
       xmlns:local="clr-namespace:Cursach.Страницы.View"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="UserView">
+      Title="KindView">
+
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <ListView ItemsSource="{Binding Users}">
+        <ListView ItemsSource="{Binding Kinds}">
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Фамилия"  DisplayMemberBinding="{Binding LastName}"/>
-                    <GridViewColumn Header="Номер телефона"  DisplayMemberBinding="{Binding PhoneNumber}"/>
-                    <GridViewColumn Header="Статус"  DisplayMemberBinding="{Binding StatusUs}"/>
+                    <GridViewColumn Header="Наименование"  DisplayMemberBinding="{Binding Title}"/>
                 </GridView>
             </ListView.View>
         </ListView>
